Further subscription elaboration.

--- a/application/YoshiKan/Infrastructure/Templates/mail/member_extendMemberSubscription_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/member_extendMemberSubscription_mail.html.twig
@@ -67,7 +67,7 @@
     </p>
     <p>&nbsp;</p>
     {% if(subscription.remarks != '') %}
-        <div style="border-top:1px solid gray;"></div>
+        <div style="border-top:1px solid gray;">&nbsp;</div>
         <p>
             {{ subscription.remarks }}
         </p>
