--- a/public/theme/YoshiKan2023/admin/admin_member_module.html.twig
+++ b/public/theme/YoshiKan2023/admin/admin_member_module.html.twig
@@ -11,7 +11,7 @@
 {% block title %}{% endblock %}
 
 {% block main %}
-    <div id="mm_module">Loading...</div>
+    <div id="mm_module" style="position: fixed;right:0;left:67px">Loading...</div>
     {{ vite_build_script_tags('mm_module','src/main.ts') }}
     {{ vite_build_style_tags('mm_module','src/main.ts') }}
 {% endblock %}
