--- a/frontends/member_module/src/assets/tailwind.css
+++ b/frontends/member_module/src/assets/tailwind.css
@@ -7,6 +7,10 @@
  * file that was distributed with this source code.
  */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /*@layer tailwind-base, primevue, tailwind-utilities;*/
 
 /*@layer tailwind-base {*/
@@ -14,10 +18,6 @@
 /*}*/
 
 /*@layer tailwind-utilities {*/
+/*    @tailwind components;*/
 /*    @tailwind utilities;*/
-/*    @tailwind variants;*/
 /*}*/
-
-@tailwind base;
-@tailwind utilities;
-@tailwind variants;
