--- a/application/YoshiKan/Infrastructure/Templates/mail/member_newMemberSubscription_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/member_newMemberSubscription_mail.html.twig
@@ -20,7 +20,7 @@
         van onze judolessen, verzoeken wij je vriendelijk om een bedrag van <strong>{{ subscription.total }} €</strong>
         over te maken naar onze bankrekening op het volgende nummer: <strong>BE37 7330 0101 8328</strong> met vermelding
         van volgende referentie
-        "<strong>"YKS-{{ subscription.id }} {{ subscription.lastname }} {{ subscription.firstname }}"</strong>".
+        "<strong>YKS-{{ subscription.id }} {{ subscription.lastname }} {{ subscription.firstname }}</strong>".
         Zo kunnen we je betaling snel identificeren. Wanneer we je betaling hebben ontvangen, zullen we je officieel
         inschrijven en krijg je toegang tot al onze trainingen en evenementen.
         We staan te popelen om je te verwelkomen op de mat.
