--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -116,6 +116,22 @@ footer {
     position: absolute;
 }
 
+#paid-feedback {
+    background-color: white;
+    position: fixed;
+    display: block;
+    width: 500px;
+    margin-left:auto;
+    margin-right:auto;
+    top:120px;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1),
+        0px 3px 15px rgba(0, 0, 0, 0.1),
+        0px 5px 30px rgba(0, 0, 0, 0.1),
+        0px 8px 44px rgba(0, 0, 0, 0.1),
+        0px 10px 59px rgba(0, 0, 0, 0.1),
+        0px 13px 74px rgba(0, 0, 0, 0.1);
+}
+
 /* footer ------------------------------------------------------------------------ */
 
 .footer-wrapper {
