Magic link / Extra location / Mark subscription as finished.

--- a/application/YoshiKan/Infrastructure/Templates/mail/member_access_code_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/member_access_code_mail.html.twig
@@ -12,6 +12,9 @@
         <strong>{{ code }}</strong>
     </p>
     <p>
+        Of gebruik deze link: <a href="{{ magicLink}}">{{ magicLink }}</a>
+    </p>
+    <p>
         Als je dit niet hebt aangevraagd, kan je deze e-mail negeren.
     </p>
     <p>
