--- a/application/YoshiKan/Infrastructure/Templates/mail/member_newMemberSubscription_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/member_newMemberSubscription_mail.html.twig
@@ -13,7 +13,7 @@
         Welkom {{ subscription.firstname }} {{ subscription.lastname }}, bij Yoshi-Kan,
         de plek waar judo-liefhebbers samenkomen om hun passie voor
         deze prachtige sport te delen. We zijn verheugd dat je ervoor hebt gekozen
-        om deel uit te maken van onze judo familie!
+        om deel uit te maken van onze judo-familie!
     </p>
     <p>
         Om de inschrijving definitief te maken en ervoor te zorgen dat je volop kunt genieten
