Update import and fix scripts.

--- a/application/YoshiKan/Infrastructure/Templates/pdf/subscription_detail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/pdf/subscription_detail.html.twig
@@ -70,7 +70,8 @@
                     <tr>
                         <td><span class="small gray">Gebdatum</span></td>
                         <td>
-                            ° {{ subscription.dateOfBirth |date('d/m/Y') }} ( {{ subscription.gender.value }} )
+                            ° {{ subscription.dateOfBirth |date('d/m/Y') }}
+                            {# ( {{ subscription.gender.value }} )#}
                         </td>
                     </tr>
                     <tr>
