--- a/application/YoshiKan/Infrastructure/Templates/mail/payment_overview_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/payment_overview_mail.html.twig
@@ -49,13 +49,13 @@
             <br>{{ subscription.remarks | nl2br }}
         </p>
     {% endif %}
-
     <p>
         <strong>Totaal: {{ subscription.total }} €</strong>
         <br>Gelieve bovenstaand bedrag over te schrijven
         <br>op rekeningnummer BE37 7330 0101 8328 (BIC KREDBEBB)
         <br>met als referentie: "YKS-{{ subscription.id }}
         {{ subscription.firstname }} {{ subscription.lastname }}".
+        <br>Je kunt het bedrag ook contant betalen tijdens één van de volgende trainingen.
     </p>
     <p>
         Alvast bedankt.
